fix: avatar element distort when wide

--- a/src/app/components/square-bot-card/square-bot-card.component.scss
+++ b/src/app/components/square-bot-card/square-bot-card.component.scss
@@ -35,8 +35,8 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    background-position: center center;
-    background-size: cover;
+    object-fit: cover;
+    object-position: top;
   }
 
   .bot-name {
